--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -16,3 +16,26 @@ services:
       - ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
     depends_on:
       - db
+
+  db:
+    image: postgres:13-alpine
+    restart: always
+    environment:
+      - POSTGRES_DB=${DBNAME}
+      - POSTGRES_USER=${DBUSER}
+      - POSTGRES_PASSWORD=${DBPASS}
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+  proxy:
+    build:
+      context: ./proxy
+    restart: always
+    ports:
+      - "80:8000"
+    volumes:
+      - static-data:/vol/static
+
+volumes:
+  postgres-data:
+  static-data:
